# TinyFootballArena

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
config/: game.json  input.json
src/: main.cpp
src/core/: App.cpp  App.hpp  Config.cpp  Config.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  LTimer.hpp
src/ecs/: Ball.hpp  Entity.hpp  Goal.cpp  Goal.hpp  Goalkeeper.cpp  Goalkeeper.hpp  Player.cpp  Player.hpp
src/scene/: MatchScene.cpp  MatchScene.hpp
src/scene/systems/: DribbleSystem.cpp  DribbleSystem.hpp  KeeperSystem.cpp  KeeperSystem.hpp  PossessionSystem.cpp  PossessionSystem.hpp
src/sys/: Physics.cpp  Physics.hpp
src/ui/: Animation.hpp  HUD.cpp  HUD.hpp
src/util/: Math.hpp
